fix the alignment of cart

--- a/resources/assets/sass/checkout/templates/_account.scss
+++ b/resources/assets/sass/checkout/templates/_account.scss
@@ -20,7 +20,7 @@
         display: block;
         width: 100%;
         height: 1px;
-        background-color: $mischka;
+        background-color: $color-mischka;
       }
     }
 
