--- a/resources/assets/sass/checkout/templates/_checkout.scss
+++ b/resources/assets/sass/checkout/templates/_checkout.scss
@@ -1,6 +1,9 @@
 .t-checkout {
   flex-grow: 1;
-  display: flex;
+
+  @media #{$breakpoint-m} {
+    display: flex;
+  }
 
   .t-checkout__cart {
     width: 100%;
