--- a/resources/assets/sass/styleguide/atoms/_buttons.scss
+++ b/resources/assets/sass/styleguide/atoms/_buttons.scss
@@ -18,7 +18,7 @@
 
     @media #{$breakpoint-s} {
       width: auto;
-      padding: $space-s $space-xxxxl;
+      padding: $space-s $space-m;
       min-width: 300px;
     }
   }
